CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2009 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

2009.October.7 (0.9.22)
  * New Tools:
    ----------
    * Label - A tool to add text to a drawing, which can be modified or
      moved later.
      By Bruno Dilly <bruno.dilly@gmail.com> (GSOC 2008)
      With modifications and integration by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * New Magic Tools:
    ----------------
    * Blinds - Close window blinds over your picture.
      Perspective - Change the image's perspective.
      Moasic Hexagon, Mosaic irregular, Mosaic square - Glass mosaic effects.
      Zoom - Zoom the image in or out.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Puzzle - Slide parts of your picture around like a sliding puzzle.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

  * Other Improvements:
    -------------------
    * Starter images can be in SVG (Scalable Vector Graphics) format.
      (Avoids loading PNG if SVG with the same name exists.)

    * Starter images can be in KPX (Kid Pix Template) format.
      (These appear to simply be JPEG with 60 byte's worth of Mac OS
      resource fork header at the beginning.)
      (Thanks to Sarah Curry for sharing some example templates to test.)

    * When a default size was not specified, SVG-based Stamps would default
      to the largest, which was canvas-sized.  Now defaulting to a more
      reasonable size.  (And users can click the maximum size choice to get
      the largest, canvas-sized rendition.)
      (SF.net bug #2836471)

    * Widened dialog windows, to help avoid word-wrap and overlap problems
      with some prompts, in some locales.