@@ -61,5 +61,6 @@
 <li><a href="toothpaste.html">Toothpaste</a></li>
 <li><a href="waves.html">Waves</a></li>
 <li><a href="wavelets.html">Wavelets</a></li>
+<li><a href="wetpaint.html">Wet Paint</a></li>
 <li><a href="zoom.html">Zoom</a></li>
 </body></html>
