@@ -6,5 +6,5 @@
 <h1 align="center">Tux Paint "Magic" Tool: Smudge</h1>
 <h2 align="center">By Albert Cahalan &lt;<a href="mailto:albert@users.sf.net">albert@users.sf.net</a>&gt;</h2>
 <p>This pushes the colors around under the mouse, like finger painting with wet paint.</p>
-<p>See also: <a href="blur.html">Blur</a></p>
+<p>See also: <a href="blur.html">Blur</a> <a href="wetpaint.html">Wet Paint</a> </p>
 </body></html>
