@@ -1,0 +1,12 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<body><html><head><title>Tux Paint "Magic" Tool: Wet Paint</title>
+<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+</head>
+<body bgcolor="#FFFFFF" text="#000000" link="#0000FF" vlink="#FF0000" alink="#FF00FF">
+<h1 align="center">Tux Paint "Magic" Tool: Wet Paint</h1>
+<h2 align="center">By Albert Cahalan &lt;<a href="mailto:albert@users.sf.net">albert@users.sf.net</a>&gt;<br>
+Bill Kendrick &lt;<a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a>&gt;<br>
+</h2>
+<p>This draws a light, smudgy coat of paint on the picture.</p>
+<p>See also: <a href="smudge.html">Smudge</a></p>
+</body></html>
