@@ -1,0 +1,8 @@
+                       Tux Paint "Magic" Tool: Wet Paint
+
+                    By Albert Cahalan <albert@users.sf.net>
+                   Bill Kendrick <bill@newbreedsoftware.com>
+
+   This draws a light, smudgy coat of paint on the picture.
+
+   See also: Smudge
