@@ -8,7 +8,7 @@ http://www.tuxpaint.org/
 
 $Id$
 
-2009.October.7 (0.9.22)
+2009.October.8 (0.9.22)
   * New Tools:
     ----------
     * Label - A tool to add text to a drawing, which can be modified or
@@ -31,6 +31,9 @@ $Id$
 
     * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
       Red, Orange, Yellow, Green, Blue, Indigo and Violet.
+
+    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
+      (Based on Smudge tool.  Requested by gallery artist Angela.)
 
   * Other Improvements:
     -------------------
